# ml-lab

./: .gitignore  README.md
BirdSpecies/: .gitignore  CLAUDE.md  README.md  pyproject.toml
BirdSpecies/experiments/: README.md
BirdSpecies/notebooks/: 01_eda.ipynb  build_eda.py
BirdSpecies/reports/: EDA_FINDINGS.md  RESULTS.md  eda_stats.json
BirdSpecies/src/: audio.py  blend.py  cv.py  data.py  dataset.py  features.py  submit.py  train_clf.py  train_cnn.py
BirdSpecies/tests/: test_data.py
CreditCardFraud/: .gitignore  CLAUDE.md  README.md  requirements.txt
CreditCardFraud/experiments/: README.md
CreditCardFraud/notebooks/: 01_eda.ipynb
CreditCardFraud/reports/: EDA_FINDINGS.md
CreditCardFraud/src/: __init__.py  anomaly.py  data.py  ensemble.py  evaluate.py  features.py  preprocessing.py  train.py
CreditCardFraud/tests/: test_data.py  test_features.py
Diabetes/: CLAUDE.md  README.md  requirements.txt
Diabetes/experiments/: README.md
Diabetes/notebooks/: 01_eda.ipynb
Diabetes/reports/: EDA_FINDINGS.md
Diabetes/src/: __init__.py  blend.py  data.py  features.py  preprocessing.py  submit.py  train.py
Diabetes/tests/: test_features.py  test_preprocessing.py
DisasterTweets/: .gitignore  CLAUDE.md  README.md  pyproject.toml
DisasterTweets/experiments/: README.md
DisasterTweets/notebooks/: 01_eda.ipynb
DisasterTweets/reports/: EDA_FINDINGS.md  RESULTS.md
DisasterTweets/src/: blend.py  cv.py  data.py  features.py  llm_eval.py  route.py  submit.py  train.py  transformer.py
DisasterTweets/tests/: test_data.py  test_features.py
EnergyAnomaly/: .gitignore  CLAUDE.md  README.md  pyproject.toml
EnergyAnomaly/experiments/: README.md
EnergyAnomaly/notebooks/: 01_eda.ipynb
EnergyAnomaly/reports/: EDA_FINDINGS.md
EnergyAnomaly/src/: blend.py  cv.py  data.py  features.py  submit.py  target_encoding.py  train.py
EnergyAnomaly/tests/: test_features.py
FlowerClf/: .gitignore  CLAUDE.md  README.md  pyproject.toml
FlowerClf/experiments/: README.md
FlowerClf/kaggle/infer/: flowerclf-b3-infer.ipynb  kernel-metadata.json
FlowerClf/kaggle/weights/: dataset-metadata.json
FlowerClf/notebooks/: 01_eda.ipynb
FlowerClf/reports/: EDA_FINDINGS.md  RESULTS.md
FlowerClf/src/: blend.py  convert.py  data.py  dataset.py  predict.py  submit.py  train.py
FlowerClf/tests/: test_data.py
HeartDisease/: CLAUDE.md  README.md  pyproject.toml
HeartDisease/experiments/: README.md
HeartDisease/notebooks/: 01_eda.ipynb  eda_build.py
HeartDisease/reports/: EDA_FINDINGS.md
HeartDisease/scripts/: remote_run.sh
HeartDisease/src/: blend.py  cv.py  data.py  features.py  metric.py  submit.py  train.py  train_tabkit.py
HeartDisease/tests/: test_metric.py  test_pipeline.py
HomeCreditDefaultRisk/: .gitignore  AGENTS.md  README.md  requirements.txt
HomeCreditDefaultRisk/experiments/: README.md
HomeCreditDefaultRisk/notebooks/: 01_application_eda.ipynb
HomeCreditDefaultRisk/reports/: INITIAL_ANALYSIS.md
HomeCreditDefaultRisk/src/: __init__.py  features.py  preprocessing.py  submit.py  train.py
HomeCreditDefaultRisk/tests/: test_features.py  test_preprocessing.py
HousePrice/: .gitignore  requirements.txt
HousePrice-v2/: CLAUDE.md  README.md  requirements.txt
HousePrice-v2/notebooks/: 01_eda.ipynb
HousePrice-v2/src/: __init__.py  benchmark.py  data.py  ensemble.py  evaluate.py  features.py  models.py  train.py
HousePrice/src/: config.py  data.py  eda.py  features.py  models.py  predict.py  train.py
IrrigationNeed/: AGENTS.md  README.md  requirements.txt
IrrigationNeed/experiments/: README.md
IrrigationNeed/notebooks/: 01_eda.ipynb
IrrigationNeed/reports/: EDA_FINDINGS.md
IrrigationNeed/src/: __init__.py  data.py  ensemble.py  features.py  hierarchical.py  preprocessing.py  submit.py  train.py
LLM-clf-FT/: CLAUDE.md  PLAN.md  README.md  requirements.txt  run_fold.sh  setup_env.sh
LLM-clf-FT/src/: data.py  (+3 more)
OptimalFertilizer/: CLAUDE.md  README.md  pyproject.toml
SpaceshipTitanic/: .gitignore  README.md  RESULTS.md  requirements.txt
StellarClass/: .gitignore  CLAUDE.md  README.md  pyproject.toml
StellarClass/experiments/: README.md
StellarClass/notebooks/: 01_eda.ipynb  build_eda.py
StellarClass/reports/: EDA_FINDINGS.md  RESULTS.md
StellarClass/src/: blend.py  cv.py  data.py  encoders.py  features.py  metrics.py  stack.py  submit.py  train.py  tune.py
StellarClass/src/dl/: train_nn.py
StellarClass/tests/: test_data.py  test_encoders.py  test_features.py
StudentHealthRisk/: .gitignore  CLAUDE.md  README.md  pyproject.toml
StudentHealthRisk/experiments/: README.md
StudentHealthRisk/notebooks/: 01_eda.ipynb  eda_build.py
StudentHealthRisk/reports/: EDA_FINDINGS.md  PROGRESS.md  RESULTS.md
StudentHealthRisk/scripts/: pseudo_label.py  remote_run.sh
StudentHealthRisk/src/: blend.py  cv.py  data.py  features.py  hillclimb.py  metric.py  models_nn.py  models_realmlp.py  stack.py  submit.py  target_encoding.py  train.py
StudentHealthRisk/tests/: test_metric.py  test_pipeline.py
StudentTestScores/: CLAUDE.md  README.md  pyproject.toml
results/: BirdSpecies.md  HeartDisease.md
tutorial-agentic-ai/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
tutorial-agentic-ai/docs/: RAG_ROADMAP.md
tutorial-agentic-ai/notebooks/: call_api.ipynb  call_llm.ipynb  langchain_agents.ipynb  langchain_basics.ipynb  langgraph_basics.ipynb  langgraph_chatbot.ipynb  langgraph_hitl_stock_trading.ipynb  langgraph_tool_chatbot.ipynb  multimodal_agent.ipynb  rag_basics.ipynb  single_agents.ipynb
tutorial-agentic-ai/src/: __init__.py  download_arxiv_papers.py
tutorial-agentic-ai/tests/: test_download_arxiv_papers.py
(+54 files in other folders)
