[project]
name = "birdspecies"
version = "0.1.0"
description = "Kaggle: MLSP 2013 Bird Classification Challenge — 19-species multi-label audio classification (flattened-pair AUC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "iterative-stratification>=0.1.9",
    "lightgbm>=4.5",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "jupyter>=1.1",
    "nbformat>=5.10",
    "pytest>=8.3",
    "kaggle>=1.6",
    # kagglesdk 0.1.32 ships a broken import (missing kagglesdk.competitions.legacy);
    # pin to the last working release so `kaggle` imports.
    "kagglesdk==0.1.30",
    "torch>=2.4",
    "torchvision>=0.19",
    "timm>=1.0.9",
]

# WAV -> mel-spectrogram decoding is only needed for the CNN track (Phase 5).
# Kept optional so the classical/feature path stays light:  uv sync --extra audio
[project.optional-dependencies]
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
